--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "gulp run"
   },
   "dependencies": {
+    "core-js": "^2.0.1",
     "font-awesome": "^4.5.0",
     "mysql": "^2.10.0",
     "react": "^0.14.5",
