--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "gulp run"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "codemirror": "^5.10.0",
     "core-js": "^2.0.1",
     "font-awesome": "^4.5.0",
