--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lodash": "^4.15.0",
     "mysql": "^2.10.0",
     "pg": "^6.1.0",
+    "plotly.js": "^1.16.3",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
-    "react-micro-container": "^1.0.1"
+    "react-micro-container": "^1.0.1",
+    "yamljs": "^0.2.8"
   },
   "devDependencies": {
     "babel-preset-node5": "^10.1.2",
