WIP: database explorer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-micro-container": "^1.0.1",
+    "react-modal": "^1.4.0",
     "react-select": "^1.0.0-rc.1",
     "yamljs": "^0.2.8"
   },
