--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-micro-container": "^1.0.1",
     "react-modal": "^1.4.0",
     "react-select": "^1.0.0-rc.1",
+    "uuid": "^2.0.3",
     "yamljs": "^0.2.8"
   },
   "devDependencies": {
