--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "codemirror": "^5.10.0",
     "core-js": "^2.0.1",
     "font-awesome": "^4.5.0",
+    "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
     "mysql": "^2.10.0",
     "pg": "^6.1.0",
@@ -20,6 +21,7 @@
     "react-micro-container": "^1.0.1",
     "react-modal": "^1.4.0",
     "react-select": "^1.0.0-rc.1",
+    "sqlite3": "^3.1.7",
     "uuid": "^2.0.3",
     "yamljs": "^0.2.8"
   },
@@ -27,6 +29,7 @@
     "babel-preset-node5": "^10.1.2",
     "babel-preset-react": "^6.3.13",
     "electron-prebuilt": "^1.4.2",
+    "electron-rebuild": "^1.3.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-load-plugins": "^1.1.0",
