--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.5.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
+    "moment": "^2.15.2",
     "mysql": "^2.10.0",
     "pg": "^6.1.0",
     "plotly.js": "^1.16.3",
