--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bdash",
   "main": "./app/main.js",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0-beta1",
   "scripts": {
     "start": "gulp run"
   },
