--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "version": "1.0.0-beta3",
   "scripts": {
+    "build:sqlite3": "electron-rebuild -p -w sqlite3",
+    "build:app": "gulp build",
     "start": "gulp run"
   },
   "dependencies": {
@@ -29,6 +31,7 @@
   "devDependencies": {
     "babel-preset-node5": "^10.1.2",
     "babel-preset-react": "^6.3.13",
+    "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.2",
     "electron-rebuild": "^1.3.0",
     "gulp": "^3.9.0",
