Copy table as TSV/Markdown

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "classnames": "^2.2.5",
     "codemirror": "^5.10.0",
     "core-js": "^2.0.1",
+    "csv-stringify": "^1.0.4",
     "font-awesome": "^4.5.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
+    "markdown-table": "^1.0.0",
     "moment": "^2.15.2",
     "mysql": "^2.10.0",
     "pg": "^6.1.0",
@@ -23,6 +25,7 @@
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-micro-container": "^1.0.1",
+    "react-micro-flyout": "^0.2.0",
     "react-modal": "^1.4.0",
     "react-select": "^1.0.0-rc.1",
     "sqlite3": "^3.1.7",
