--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash": "^4.15.0",
     "markdown-table": "^1.0.0",
     "moment": "^2.15.2",
-    "mysql": "^2.10.0",
+    "mysql2": "^1.1.2",
     "pg": "^6.1.0",
     "plotly.js": "^1.16.3",
     "react": "^0.14.5",
