--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": ["node5", "react"]
+  "presets": ["react"],
+  "plugins": [
+    "babel-plugin-transform-es2015-modules-commonjs"
+  ]
 }
