--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "1.0.0-rc1",
   "scripts": {
     "build:sqlite3": "electron-rebuild -p -w sqlite3",
-    "test": "mocha --compilers js:babel-register",
+    "test": "ava --concurrency 4",
+    "lint": "eslint --max-warnings 0 --ignore-path .eslintignore .",
     "start": "electron ."
   },
   "dependencies": {
@@ -35,14 +36,19 @@
     "yamljs": "^0.2.8"
   },
   "devDependencies": {
+    "@hokaccha/eslint-config": "^2.2.0",
     "ava": "^0.18.0",
     "electron-osx-sign": "^0.4.3",
     "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.13",
-    "electron-rebuild": "^1.5.7"
+    "electron-rebuild": "^1.5.7",
+    "eslint": "^3.14.1",
+    "eslint-plugin-react": "^6.9.0"
   },
   "ava": {
-    "require": ["babel-register"]
+    "require": [
+      "babel-register"
+    ]
   },
   "license": "MIT"
 }
