--- a/bin/build
+++ b/bin/build
@@ -28,4 +28,4 @@ VERSION=$(cat package.json | jq -r '.version')
 ./node_modules/.bin/electron-osx-sign out/Bdash-darwin-x64/Bdash.app
 
 cd out/Bdash-darwin-x64
-zip -qry Bdash-$VERSION.zip Bdash.app
+zip -qry Bdash-$VERSION-macOS.zip Bdash.app
