--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "yamljs": "^0.2.8"
   },
   "devDependencies": {
-    "@hokaccha/eslint-config": "^2.2.0",
+    "@hokaccha/eslint-config": "^2.3.0",
     "ava": "^0.18.0",
     "electron-osx-sign": "^0.4.3",
     "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.5.7",
     "eslint": "^3.14.1",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "spectron": "^3.6.0"
   },
   "ava": {
     "require": [
