--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "codemirror": "^5.10.0",
     "core-js": "^2.0.1",
     "csv-stringify": "^1.0.4",
+    "dotenv": "^4.0.0",
     "font-awesome": "^4.5.0",
+    "fs-extra": "^2.1.2",
     "immup": "^3.0.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
