--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   "devDependencies": {
     "@hokaccha/eslint-config": "^2.3.0",
     "ava": "^0.18.0",
-    "electron-osx-sign": "^0.4.3",
-    "electron-packager": "^8.2.0",
-    "electron-prebuilt": "^1.4.13",
+    "electron": "^1.6.2",
+    "electron-osx-sign": "^0.4.4",
+    "electron-packager": "^8.6.0",
     "electron-rebuild": "^1.5.7",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
