--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.1.0",
   "scripts": {
     "build:sqlite3": "electron-rebuild -p -w sqlite3",
-    "test": "ava --concurrency 4",
+    "test": "node --harmony-async-await ./node_modules/.bin/ava --serial",
     "lint": "eslint --max-warnings 0 --ignore-path .eslintignore .",
     "start": "electron ."
   },
