--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
     "start": "electron ."
   },
   "dependencies": {
-    "@google-cloud/bigquery": "^0.7.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-preset-react": "^6.3.13",
-    "babel-register": "^6.18.0",
-    "classnames": "^2.2.5",
-    "codemirror": "^5.28.0",
-    "core-js": "^2.0.1",
-    "csv-stringify": "^1.0.4",
-    "dotenv": "^4.0.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "font-awesome": "^4.5.0",
-    "fs-extra": "^3.0.1",
-    "immup": "^3.0.0",
-    "js-yaml": "^3.6.1",
-    "lodash": "^4.15.0",
-    "markdown-table": "^1.0.0",
-    "moment": "^2.15.2",
-    "mysql2": "^1.1.2",
-    "pg": "^6.1.0",
-    "plotly.js": "^1.30.0",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5",
+    "@google-cloud/bigquery": "0.7.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-preset-react": "6.24.1",
+    "babel-register": "6.26.0",
+    "classnames": "2.2.5",
+    "codemirror": "5.33.0",
+    "core-js": "2.5.3",
+    "csv-stringify": "2.0.1",
+    "dotenv": "4.0.0",
+    "electron-squirrel-startup": "1.0.0",
+    "font-awesome": "4.7.0",
+    "fs-extra": "5.0.0",
+    "immup": "3.0.0",
+    "js-yaml": "3.10.0",
+    "lodash": "4.17.4",
+    "markdown-table": "1.1.1",
+    "moment": "2.20.1",
+    "mysql2": "1.5.1",
+    "pg": "7.4.1",
+    "plotly.js": "1.32.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-micro-container": "^1.0.1",
-    "react-micro-flyout": "^0.2.0",
-    "react-modal": "^1.4.0",
-    "react-select": "^1.0.0-rc.1",
-    "sqlite3": "^3.1.7",
-    "td": "^0.2.7",
-    "yamljs": "^0.2.8"
+    "react-micro-flyout": "1.0.1",
+    "react-modal": "3.1.10",
+    "react-select": "1.2.1",
+    "sqlite3": "3.1.13",
+    "td": "0.3.0",
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "@hokaccha/eslint-config": "^2.3.0",
-    "ava": "^0.18.0",
-    "electron": "^1.6.2",
-    "electron-osx-sign": "^0.4.4",
-    "electron-packager": "^8.6.0",
-    "electron-rebuild": "^1.5.7",
-    "electron-winstaller": "^2.6.3",
-    "eslint": "^3.14.1",
-    "eslint-plugin-react": "^6.9.0",
-    "execa": "^0.6.3",
-    "spectron": "^3.6.0"
+    "@hokaccha/eslint-config": "2.3.0",
+    "ava": "0.24.0",
+    "electron": "1.7.10",
+    "electron-osx-sign": "0.4.7",
+    "electron-packager": "10.1.1",
+    "electron-rebuild": "1.7.3",
+    "electron-winstaller": "2.6.3",
+    "eslint": "3.11.0",
+    "eslint-plugin-react": "7.5.1",
+    "execa": "0.9.0",
+    "spectron": "3.7.2"
   },
   "ava": {
     "require": [
