--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@hokaccha/eslint-config": "2.3.0",
     "ava": "0.24.0",
+    "css-loader": "0.28.8",
     "electron": "1.7.10",
     "electron-packager": "10.1.1",
     "electron-rebuild": "1.7.3",
@@ -51,7 +52,14 @@
     "eslint": "3.11.0",
     "eslint-plugin-react": "7.5.1",
     "execa": "0.9.0",
-    "spectron": "3.7.2"
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.6",
+    "spectron": "3.7.2",
+    "ts-loader": "3.2.0",
+    "typescript": "2.6.2",
+    "url-loader": "0.6.2",
+    "webpack": "3.10.0",
+    "webpack-node-externals": "1.6.0"
   },
   "ava": {
     "require": [
