--- a/package.json
+++ b/package.json
@@ -39,6 +39,14 @@
   },
   "devDependencies": {
     "@hokaccha/eslint-config": "2.3.0",
+    "@types/classnames": "2.2.3",
+    "@types/codemirror": "0.0.55",
+    "@types/csv-stringify": "1.4.1",
+    "@types/node": "9.3.0",
+    "@types/plotly.js": "1.28.10",
+    "@types/react": "16.0.34",
+    "@types/react-dom": "16.0.3",
+    "@types/react-select": "1.1.0",
     "ava": "0.24.0",
     "css-loader": "0.28.8",
     "electron": "1.7.10",
