--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "file-loader": "1.1.6",
     "spectron": "3.7.2",
     "ts-loader": "3.2.0",
+    "ts-node": "4.1.0",
     "typescript": "2.6.2",
     "url-loader": "0.6.2",
     "webpack": "3.10.0",
@@ -67,7 +68,7 @@
   },
   "ava": {
     "require": [
-      "babel-register"
+      "ts-node/register"
     ]
   },
   "license": "MIT"
