--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/classnames": "2.2.3",
     "@types/codemirror": "0.0.55",
     "@types/csv-stringify": "1.4.1",
+    "@types/mocha": "2.2.46",
     "@types/node": "9.3.0",
     "@types/plotly.js": "1.28.10",
     "@types/react": "16.0.34",
@@ -58,6 +59,7 @@
     "execa": "0.9.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
+    "mocha": "4.1.0",
     "spectron": "3.7.2",
     "ts-loader": "3.2.0",
     "ts-node": "4.1.0",
