--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.2.1",
   "scripts": {
     "test": "mocha 'test/**/*.test.ts'",
-    "lint": "eslint --max-warnings 0 --ignore-path .eslintignore .",
+    "lint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
     "build:sqlite3": "electron-rebuild -p -w sqlite3",
     "watch": "webpack --watch",
     "start": "electron .",
@@ -40,7 +40,6 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "@hokaccha/eslint-config": "2.3.0",
     "@types/classnames": "2.2.3",
     "@types/codemirror": "0.0.55",
     "@types/csv-stringify": "1.4.1",
@@ -56,6 +55,7 @@
     "electron-rebuild": "1.7.3",
     "electron-winstaller": "2.6.3",
     "eslint": "3.11.0",
+    "eslint-config-prettier": "2.9.0",
     "eslint-plugin-react": "7.5.1",
     "execa": "0.9.0",
     "extract-text-webpack-plugin": "3.0.2",
@@ -66,6 +66,7 @@
     "ts-loader": "3.2.0",
     "ts-node": "4.1.0",
     "typescript": "2.6.2",
+    "typescript-eslint-parser": "12.0.0",
     "url-loader": "0.6.2",
     "webpack": "3.10.0",
     "webpack-node-externals": "1.6.0"
