--- a/bin/build
+++ b/bin/build
@@ -3,9 +3,6 @@
 set -ex
 
 export NODE_ENV=production
-export npm_config_target=1.7.10
-export npm_config_disturl=https://atom.io/download/electron
-export npm_config_runtime=electron
 
 BUILD_DIR=tmp/build
 VERSION=$(node bin/print_version)
@@ -13,9 +10,9 @@ VERSION=$(node bin/print_version)
 rm -rf $BUILD_DIR out
 mkdir -p $BUILD_DIR
 DIST_DIR=./tmp/build/dist ./node_modules/.bin/webpack
-cp -a html db package.json package-lock.json index.js $BUILD_DIR
+cp -a html db package.json yarn.lock .yarnrc index.js $BUILD_DIR
 cd $BUILD_DIR
-npm install
+yarn
 cd -
 
 ./node_modules/.bin/electron-packager $BUILD_DIR Bdash \
