--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron .",
     "watch": "webpack --watch",
     "build:sqlite3": "electron-rebuild -p -w sqlite3",
-    "test": "mocha 'test/**/*.test.ts'",
+    "test": "electron-mocha 'test/**/*.test.ts'",
     "lint": "npm run lint:eslint && npm run lint:tsc && npm run lint:prettier",
     "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
     "lint:tsc": "tsc --noEmit",
@@ -54,6 +54,7 @@
     "@types/react-select": "1.1.0",
     "css-loader": "0.28.8",
     "electron": "1.7.11",
+    "electron-mocha": "5.0.0",
     "electron-packager": "10.1.1",
     "electron-rebuild": "1.7.3",
     "electron-winstaller": "2.6.3",
@@ -63,7 +64,6 @@
     "execa": "0.9.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
-    "mocha": "4.1.0",
     "prettier": "1.10.2",
     "spectron": "3.7.2",
     "ts-loader": "3.2.0",
