--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,8 +4,6 @@ env:
   node: true
   mocha: true
 
-parser: typescript-eslint-parser
-
 parserOptions:
   sourceType: module
   ecmaFeatures:
@@ -23,3 +21,9 @@ extends:
 rules:
   eqeqeq: [error, allow-null]
   prefer-const: error
+
+overrides:
+  files: ['**/*.ts', '**/*.tsx']
+  parser: typescript-eslint-parser
+  rules:
+    no-undef: off
