--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-sudo: required
-dist: trusty
+os: osx
+osx_image: xcode9.2
 
 language: node_js
 node_js:
-  - "8.9.0"
+  - "8.9.4"
+
+branches:
+  except:
+    - "/^v\\d+\\.\\d+\\.\\d+$/"
 
 cache:
   yarn: true
@@ -11,19 +15,8 @@ cache:
   directories:
     - node_modules
     - $HOME/.electron
-    - $HOME/.cache/electron-builder
-
-install:
-  - yarn install --force
-  - export DISPLAY=':99.0'
-  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-
-# https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-xvfb-to-Run-Tests-That-Require-a-GUI
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3
+    - $HOME/Library/Caches/Yarn/v1
 
 script:
-  - yarn lint
-  - yarn test
+  - yarn run lint
+  - yarn run test
