--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,20 +3,21 @@ os: Visual Studio 2015
 platform:
   - x64
 
+skip_tags: true
+
+build: off
+
 environment:
-  nodejs_version: "8.9.0"
+  nodejs_version: "8.9.4"
 
 cache:
   - node_modules
   - '%USERPROFILE%\.electron'
   - '%LOCALAPPDATA%\Yarn'
-  - '%LOCALAPPDATA%\electron-builder\cache'
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
-  - yarn install --force
-
-build: off
+  - yarn install
 
 test_script:
   - yarn run lint
