Fix circleci setting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,17 @@ jobs:
     docker:
       - image: circleci/node:8.9.4-browsers
         environment:
-          - MYSQL_USER=bdash
-          - MYSQL_DATABASE=bdash_test
-          - POSTGRES_USER=bdash
-          - POSTGRES_DB=bdash_test
+          MYSQL_USER: bdash
+          POSTGRES_USER: bdash
       - image: mysql:5.6
         environment:
-          - MYSQL_USER=bdash
-          - MYSQL_DATABASE=bdash_test
+          MYSQL_USER: bdash
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: bdash_test
       - image: postgres:9.6
         environment:
-          - POSTGRES_USER=bdash
-          - POSTGRES_DB=bdash_test
+          - POSTGRES_USER: bdash
+          - POSTGRES_DB: bdash_test
     steps:
       - checkout
       - restore_cache:
