--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,12 @@ jobs:
         environment:
           MYSQL_USER: bdash
           POSTGRES_USER: bdash
-      - image: mysql:5.6
+      - image: circleci/mysql:5.7
         environment:
           MYSQL_USER: bdash
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: bdash_test
-      - image: postgres:9.6
+      - image: circleci/postgres:9.6-alpine-ram
         environment:
           - POSTGRES_USER: bdash
           - POSTGRES_DB: bdash_test
