--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,11 @@ jobs:
     docker:
       - image: circleci/node:8.9.4-browsers
         environment:
-          MYSQL_USER: bdash
+          MYSQL_USER: root
           POSTGRES_USER: bdash
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_USER: bdash
+          MYSQL_USER: root
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: bdash_test
       - image: circleci/postgres:9.6-alpine-ram
