Separate remote tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "electron .",
     "watch": "webpack --watch",
-    "test": "electron-mocha 'test/**/*.test.ts'",
+    "test": "yarn run test:unit",
+    "test:unit": "electron-mocha 'test/unit/**/*.test.ts'",
+    "test:remote": "electron-mocha 'test/remote/**/*.test.ts'",
     "lint": "npm run lint:eslint && npm run lint:tsc && npm run lint:prettier",
     "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
     "lint:tsc": "tsc --noEmit",
