--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:unit": "electron-mocha 'test/unit/**/*.test.ts'",
     "test:remote": "electron-mocha 'test/remote/**/*.test.ts'",
     "test:integration": "mocha --exit test/integration/index.ts",
-    "lint": "npm run lint:eslint && npm run lint:tsc && npm run lint:prettier",
+    "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
     "lint:tsc": "tsc --noEmit",
     "lint:prettier": "prettier --list-different ./**/*.{js,jsx,ts,tsx,css,json}",
