--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "electron .",
     "watch": "webpack --watch",
     "test": "yarn run test:unit",
-    "test:unit": "electron-mocha 'test/unit/**/*.test.ts'",
-    "test:remote": "electron-mocha 'test/remote/**/*.test.ts'",
+    "test:unit": "electron-mocha \"test/unit/**/*.test.ts\"",
+    "test:remote": "electron-mocha \"test/remote/**/*.test.ts\"",
     "test:integration": "mocha --exit test/integration/index.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
