--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "yarn run test:unit",
     "test:unit": "electron-mocha \"test/unit/**/*.test.ts\"",
     "test:remote": "electron-mocha \"test/remote/**/*.test.ts\"",
-    "test:integration": "mocha --exit test/integration/index.ts",
+    "test:integration": "yarn run compile:prod && mocha --exit test/integration/index.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
     "lint:tsc": "tsc --noEmit",
