--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "yarn.lock" }}
       - run: yarn install
-      - run: yarn run lint
-      - run: yarn run test
+      - run: yarn run ci
       - save_cache:
           key: dependency-cache-{{ checksum "yarn.lock" }}
           paths:
