--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "0.28.8",
     "electron": "1.8.2",
     "electron-builder": "20.8.1",
+    "electron-builder-squirrel-windows": "20.8.0",
     "electron-log": "2.2.14",
     "electron-mocha": "6.0.1",
     "electron-updater": "2.21.4",
