--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@google-cloud/bigquery": "0.7.0",
+    "aws-sdk": "2.259.1",
     "classnames": "2.2.5",
     "codemirror": "5.33.0",
     "csv-stringify": "2.0.1",
