--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react": "16.0.34",
     "@types/react-dom": "16.0.3",
     "@types/react-select": "1.1.0",
+    "@types/webdriverio": "4.10.3",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.8",
