--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "yarn run test:unit && yarn run test:integration",
     "test:unit": "electron-mocha --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
     "test:build": "webpack --env.BUILD_ENV=test && electron-builder build --config electron-builder.test.yml --publish never --dir",
-    "test:integration": "yarn run test:build && mocha --exit --grep @remote --invert test/integration/test.ts",
+    "test:integration": "yarn run test:build && mocha --exit test/integration/test.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
     "lint:tsc": "tsc --noEmit",
