Cross platform build on travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-os: osx
-osx_image: xcode9.3
+os:
+  - osx
+  - linux
+  - windows
 
 language: node_js
 node_js:
@@ -15,7 +17,12 @@ cache:
   directories:
     - node_modules
     - $HOME/.electron
-    - $HOME/Library/Caches/Yarn/v1
+
+before_script:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sh -e /etc/init.d/xvfb start; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then npm install -g yarn; fi
 
 script:
   - yarn run ci
