Add chart types.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "moment": "2.20.1",
     "mysql2": "1.5.3",
     "pg": "7.4.3",
-    "plotly.js": "1.51.1",
+    "plotly.js-basic-dist-min": "1.51.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-micro-flyout": "1.0.1",
@@ -56,9 +56,10 @@
     "@types/classnames": "2.2.3",
     "@types/codemirror": "0.0.81",
     "@types/csv-stringify": "1.4.1",
+    "@types/lodash": "4.14.149",
     "@types/mocha": "2.2.46",
     "@types/node": "12.12.12",
-    "@types/plotly.js": "1.44.17",
+    "@types/plotly.js": "1.44.21",
     "@types/react": "~16.8.25",
     "@types/react-dom": "~16.8.5",
     "@types/react-select": "~3.0.8",
