--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "baseUrl": "./",
+    "paths": { "plotly.js-basic-dist-min": ["node_modules/@types/plotly.js"] }
   },
   "include": ["src/**/*", "test/**/*"]
 }
