Add types for Editor and Setting.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@google-cloud/bigquery": "0.7.0",
     "aws-sdk": "2.259.1",
     "classnames": "2.2.5",
-    "codemirror": "5.33.0",
+    "codemirror": "~5.49.2",
     "csv-stringify": "2.0.1",
     "electron-is-dev": "1.1.0",
     "electron-log": "3.0.9",
@@ -38,7 +38,7 @@
     "fs-extra": "5.0.0",
     "immup": "3.0.0",
     "js-yaml": "3.10.0",
-    "lodash": "4.17.13",
+    "lodash": "~4.17.15",
     "markdown-table": "1.1.2",
     "moment": "2.20.1",
     "mysql2": "1.5.3",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@types/classnames": "2.2.3",
-    "@types/codemirror": "0.0.55",
+    "@types/codemirror": "0.0.81",
     "@types/csv-stringify": "1.4.1",
     "@types/mocha": "2.2.46",
     "@types/node": "12.12.12",
