--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "mysql2": "1.5.3",
     "pg": "7.4.3",
     "plotly.js": "1.51.1",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-micro-flyout": "1.0.1",
     "react-modal": "3.1.10",
-    "react-select": "1.2.1",
+    "react-select": "~3.0.8",
     "sqlite3": "4.1.0",
     "td": "0.3.0"
   },
@@ -59,9 +59,9 @@
     "@types/mocha": "2.2.46",
     "@types/node": "12.12.12",
     "@types/plotly.js": "1.44.17",
-    "@types/react": "16.0.34",
-    "@types/react-dom": "16.0.3",
-    "@types/react-select": "1.1.0",
+    "@types/react": "~16.8.25",
+    "@types/react-dom": "~16.8.5",
+    "@types/react-select": "~3.0.8",
     "@types/webdriverio": "4.10.3",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
@@ -86,6 +86,10 @@
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
     "webpack-node-externals": "1.6.0"
+  },
+  "resolutions": {
+    "@types/react": "16.8.25",
+    "@types/react-dom": "16.8.5"
   },
   "license": "MIT"
 }
