--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/csv-stringify": "1.4.1",
     "@types/lodash": "4.14.149",
     "@types/mocha": "2.2.46",
+    "@types/sqlite3": "3.1.6",
     "@types/node": "12.12.12",
     "@types/plotly.js": "1.44.21",
     "@types/react": "~16.8.25",
