--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "execa": "0.9.0",
     "file-loader": "~4.3.0",
     "mini-css-extract-plugin": "~0.8.0",
-    "prettier": "1.14.0",
+    "prettier": "~1.19.1",
     "spectron": "9.0.0",
     "ts-loader": "6.2.1",
     "ts-node": "5.0.1",
