--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-micro-flyout": "1.0.1",
     "react-modal": "3.1.10",
     "react-select": "~3.0.8",
-    "sqlite3": "4.1.0",
+    "sqlite3": "~4.1.1",
     "td": "0.3.0"
   },
   "devDependencies": {
