--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-micro-flyout": "1.0.1",
     "react-modal": "3.1.10",
     "react-select": "~3.0.8",
+    "react-splitter-layout": "4.0.0",
     "sqlite3": "~4.1.1",
     "td": "0.3.0"
   },
@@ -58,12 +59,13 @@
     "@types/csv-stringify": "1.4.1",
     "@types/lodash": "4.14.149",
     "@types/mocha": "2.2.46",
-    "@types/sqlite3": "3.1.6",
     "@types/node": "12.12.12",
     "@types/plotly.js": "1.44.21",
     "@types/react": "~16.8.25",
     "@types/react-dom": "~16.8.5",
     "@types/react-select": "~3.0.8",
+    "@types/react-splitter-layout": "3.0.0",
+    "@types/sqlite3": "3.1.6",
     "@types/webdriverio": "4.10.3",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
