--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:build": "webpack --env.BUILD_ENV=test --mode=development && electron-builder build --config electron-builder.test.yml --publish never --dir",
     "test:integration": "yarn run test:build && mocha --exit test/integration/test.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
-    "lint:eslint": "eslint --ext '.js,.jsx,.ts,.tsx' .",
+    "lint:eslint": "eslint --ext \".js,.jsx,.ts,.tsx\" .",
     "lint:tsc": "tsc --noEmit",
     "lint:prettier": "prettier --list-different \"./**/*.{js,jsx,ts,tsx,css,json}\"",
     "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,json}\"",
@@ -67,6 +67,8 @@
     "@types/react-splitter-layout": "3.0.0",
     "@types/sqlite3": "3.1.6",
     "@types/webdriverio": "4.10.3",
+    "@typescript-eslint/eslint-plugin": "2.19.0",
+    "@typescript-eslint/parser": "2.19.0",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.8",
@@ -74,9 +76,10 @@
     "electron-builder": "21.2.0",
     "electron-mocha": "6.0.1",
     "electron-publisher-s3": "20.14.4",
-    "eslint": "4.16.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-react": "7.5.1",
+    "eslint": "~6.8.0",
+    "eslint-config-prettier": "~6.10.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-react": "~7.18.3",
     "execa": "0.9.0",
     "file-loader": "~4.3.0",
     "mini-css-extract-plugin": "~0.8.0",
@@ -85,7 +88,6 @@
     "ts-loader": "6.2.1",
     "ts-node": "5.0.1",
     "typescript": "3.7.2",
-    "typescript-eslint-parser": "22.0.0",
     "url-loader": "0.6.2",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
