--- a/.yarnrc
+++ b/.yarnrc
@@ -1,5 +1,5 @@
 save-exact true
-disturl "https://atom.io/download/electron"
-target "7.1.2"
+disturl "https://electronjs.org/headers"
+target "7.1.12"
 runtime "electron"
 build-from-source true
