--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -40,3 +40,4 @@ overrides:
   - files: ['webpack.config.js']
     rules:
       '@typescript-eslint/no-var-requires': off
+      '@typescript-eslint/explicit-function-return-type': off
