Fix query parser to use codemirror

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "electron app/development",
     "watch": "webpack --mode=development --watch",
     "test": "yarn run test:unit && yarn run test:integration",
-    "test:unit": "electron-mocha --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
-    "test:unit:remote": "electron-mocha --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
+    "test:unit": "electron-mocha --renderer --color --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
+    "test:unit:remote": "electron-mocha --renderer --color --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
     "test:build": "webpack --env.BUILD_ENV=test --mode=development && electron-builder build --config electron-builder.test.yml --publish never --dir",
     "test:integration": "yarn run test:build && mocha --exit test/integration/test.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@types/classnames": "2.2.3",
-    "@types/codemirror": "0.0.81",
+    "@types/codemirror": "0.0.85",
     "@types/csv-stringify": "1.4.1",
     "@types/lodash": "4.14.149",
     "@types/mocha": "2.2.46",
@@ -74,7 +74,7 @@
     "css-loader": "0.28.8",
     "electron": "7.1.12",
     "electron-builder": "21.2.0",
-    "electron-mocha": "6.0.1",
+    "electron-mocha": "~8.2.1",
     "electron-publisher-s3": "20.14.4",
     "eslint": "~6.8.0",
     "eslint-config-prettier": "~6.10.0",
