Allow non null assertion

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,6 +27,7 @@ rules:
   '@typescript-eslint/ban-ts-ignore': off
   '@typescript-eslint/no-use-before-define': off
   '@typescript-eslint/no-explicit-any': off
+  '@typescript-eslint/no-non-null-assertion': off
 
 plugins:
   - react
