--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -37,7 +37,7 @@ settings:
     version: detect
 
 overrides:
-  - files: ['webpack.config.js']
+  - files: ['*.js']
     rules:
       '@typescript-eslint/no-var-requires': off
       '@typescript-eslint/explicit-function-return-type': off
