--- a/package.json
+++ b/package.json
@@ -54,22 +54,22 @@
     "td": "0.3.0"
   },
   "devDependencies": {
-    "@types/classnames": "2.2.3",
-    "@types/codemirror": "0.0.87",
+    "@types/classnames": "2.2.10",
+    "@types/codemirror": "0.0.96",
     "@types/csv-stringify": "1.4.1",
-    "@types/lodash": "4.14.149",
+    "@types/lodash": "4.14.157",
     "@types/mocha": "2.2.46",
     "@types/node": "12.12.12",
     "@types/plotly.js": "1.44.21",
     "@types/react": "~16.8.25",
     "@types/react-dom": "~16.8.5",
-    "@types/react-modal": "3.10.5",
-    "@types/react-select": "~3.0.8",
+    "@types/react-modal": "3.10.6",
+    "@types/react-select": "~3.0.13",
     "@types/react-splitter-layout": "3.0.0",
     "@types/sqlite3": "3.1.6",
     "@types/webdriverio": "4.13.3",
-    "@typescript-eslint/eslint-plugin": "2.19.0",
-    "@typescript-eslint/parser": "2.19.0",
+    "@typescript-eslint/eslint-plugin": "3.4.0",
+    "@typescript-eslint/parser": "3.4.0",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.8",
@@ -87,9 +87,9 @@
     "mini-css-extract-plugin": "~0.8.0",
     "prettier": "~1.19.1",
     "spectron": "9.0.0",
-    "ts-loader": "6.2.1",
+    "ts-loader": "~7.0.5",
     "ts-node": "5.0.1",
-    "typescript": "3.7.2",
+    "typescript": "^3.9.5",
     "url-loader": "0.6.2",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
