--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - migrate-github-actions
   pull_request:
     branches:
       - master
@@ -25,7 +24,18 @@ jobs:
           node-version: "12"
       - run: sudo apt-get install xvfb
         if: ${{ matrix.os == 'ubuntu-latest' }}
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: yarn
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
       - run: xvfb-run yarn ci
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - run: yarn ci
@@ -55,7 +65,18 @@ jobs:
         with:
           node-version: "12"
       - run: sudo apt-get install xvfb
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: yarn
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
       - run: xvfb-run yarn test:unit:remote
         env:
           POSTGRES_USER: bdash_test
