--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "noUnusedParameters": true,
     "strictNullChecks": true,
     "baseUrl": "./",
-    "paths": { "plotly.js-basic-dist-min": ["node_modules/@types/plotly.js"] }
+    "paths": { "plotly.js-basic-dist-min": ["node_modules/@types/plotly.js"], "spectron": ["types/spectron"] }
   },
-  "include": ["src/**/*", "test/**/*"]
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules/spectron/lib/spectron.d.ts"]
 }
