Move spectron original type definition to src/node_modules
ref. https://www.typescriptlang.org/docs/handbook/module-resolution.html#how-typescript-resolves-modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "noUnusedParameters": true,
     "strictNullChecks": true,
     "baseUrl": "./",
-    "paths": { "plotly.js-basic-dist-min": ["node_modules/@types/plotly.js"], "spectron": ["types/spectron"] }
+    "paths": { "plotly.js-basic-dist-min": ["node_modules/@types/plotly.js"] }
   },
-  "include": ["src/**/*", "test/**/*"],
-  "exclude": ["node_modules/spectron/lib/spectron.d.ts"]
+  "include": ["src/**/*", "test/**/*"]
 }
