--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "start": "electron app/development",
     "watch": "webpack --mode=development --watch",
     "test": "yarn run test:unit && yarn run test:integration",
-    "test:unit": "electron-mocha --renderer --color --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
-    "test:unit:remote": "electron-mocha --renderer --color --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
+    "test:unit": "electron-mocha --renderer --require ts-node/register --ui tdd --color --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
+    "test:unit:remote": "electron-mocha --renderer --require ts-node/register --ui tdd --color --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
     "test:build": "webpack --env.BUILD_ENV=test --mode=development && electron-builder build --config electron-builder.test.yml --publish never --dir",
-    "test:integration": "yarn run test:build && mocha --exit test/integration/test.ts",
+    "test:integration": "yarn run test:build && mocha --exit --require ts-node/register --ui tdd test/integration/test.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext \".js,.jsx,.ts,.tsx\" --max-warnings 0 .",
     "lint:tsc": "tsc --noEmit",
@@ -74,7 +74,7 @@
     "css-loader": "0.28.8",
     "electron": "11.4.2",
     "electron-builder": "22.10.5",
-    "electron-mocha": "~8.2.1",
+    "electron-mocha": "~10.0.0",
     "electron-notarize": "0.3.0",
     "electron-publisher-s3": "20.14.4",
     "eslint": "~7.3.1",
