--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "yarn run test:unit && yarn run test:integration",
     "test:unit": "electron-mocha --renderer --color --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
     "test:unit:remote": "electron-mocha --renderer --color --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
-    "test:build": "webpack --env.BUILD_ENV=test --mode=development && electron-builder build --config electron-builder.test.yml --publish never --dir",
+    "test:build": "webpack --env BUILD_ENV=test --mode=development && electron-builder build --config electron-builder.test.yml --publish never --dir",
     "test:integration": "yarn run test:build && mocha --exit test/integration/test.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext \".js,.jsx,.ts,.tsx\" --max-warnings 0 .",
@@ -70,9 +70,8 @@
     "@types/webdriverio": "4.13.3",
     "@typescript-eslint/eslint-plugin": "3.4.0",
     "@typescript-eslint/parser": "3.4.0",
-    "clean-webpack-plugin": "0.1.19",
-    "copy-webpack-plugin": "4.5.1",
-    "css-loader": "0.28.8",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.1",
     "electron": "7.1.12",
     "electron-builder": "22.10.5",
     "electron-mocha": "~8.2.1",
@@ -83,17 +82,15 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "~7.20.0",
     "execa": "0.9.0",
-    "file-loader": "~4.3.0",
-    "mini-css-extract-plugin": "~0.8.0",
+    "mini-css-extract-plugin": "~1.4.1",
     "prettier": "~1.19.1",
     "spectron": "9.0.0",
-    "ts-loader": "~7.0.5",
+    "ts-loader": "~8.1.0",
     "ts-node": "5.0.1",
     "typescript": "^3.9.5",
-    "url-loader": "0.6.2",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-node-externals": "1.6.0"
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "resolutions": {
     "@types/react": "16.8.25",
