Support nested fields in query result

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "plotly.js-basic-dist-min": "1.57.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-linkify": "^1.0.0-alpha",
     "react-micro-flyout": "1.0.1",
     "react-modal": "3.1.10",
     "react-select": "~3.0.8",
