--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,13 +51,18 @@ jobs:
           MYSQL_ROOT_PASSWORD: ""
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       postgres:
-        image: postgres:13-alpine
+        image: postgres
         ports:
           - 5432:5432
         env:
           POSTGRES_USER: bdash_test
           POSTGRES_DB: bdash_test
           POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
