--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "ci": "yarn run lint && yarn run test:unit"
   },
   "dependencies": {
+    "@aws-sdk/client-athena": "^3.46.0",
     "@fortawesome/fontawesome-free": "5.12.0",
     "@google-cloud/bigquery": "5.6.0",
-    "aws-sdk": "2.259.1",
     "classnames": "2.2.5",
     "codemirror": "~5.58.2",
     "csv-stringify": "2.0.1",
