--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@google-cloud/bigquery": "5.6.0",
     "classnames": "2.2.5",
     "codemirror": "~5.58.2",
+    "compare-versions": "^4.1.3",
     "csv-stringify": "2.0.1",
     "electron-is-dev": "2.0.0",
     "electron-log": "4.3.0",
-    "electron-updater": "4.3.8",
     "fs-extra": "5.0.0",
     "immup": "3.0.0",
     "js-yaml": "3.10.0",
@@ -42,6 +42,7 @@
     "markdown-table": "1.1.2",
     "moment": "2.20.1",
     "mysql2": "1.7.0",
+    "node-fetch": "^2.6.7",
     "pg": "8.7.1",
     "plotly.js-basic-dist-min": "1.57.1",
     "react": "16.8.6",
